# android_localization

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  cargo.toml
cli/: Cargo.toml
cli/src/: args_parser.rs  args_user.rs  constants.rs  lib.rs  main.rs
cli/tests/: localize.rs  localized.rs  tests.rs  validate.rs
cli/tests/file_utilities/: mod.rs
cli/tests/helpers/: mod.rs
cli/tests_data/localize/output_one_locale_per_file_with_mapping/: es_fr.csv  fr_es.csv  french.csv  spanish.csv
cli/tests_data/localize/output_one_locale_per_file_without_mapping/: es_fr.csv  fr_es.csv  french.csv  spanish.csv
core/: .gitignore  Cargo.toml
core/src/: android_string.rs  constants.rs  error.rs  file_helper.rs  foreign_lang_ids_finder.rs  from_translate.rs  lib.rs  localizable_strings.rs  localize.rs  localized.rs  localized_string.rs  localized_strings.rs  to_translate.rs  util.rs  validate.rs  validator.rs  xml_read_helper.rs
core/src/helper/: mod.rs  xml_helper.rs  xml_read_helper.rs
core/src/ops/: dedup.rs  extract.rs  filter.rs  merge.rs  sort.rs
core/src/reader/: csv_reader.rs  localized_strings.rs  mod.rs  translated_string.rs  xml_reader.rs
core/src/util/: foreign_lang_ids_finder.rs  foreign_locale_ids_finder.rs  two_pointer_comparison.rs  two_pointer_traversal.rs  xml_helper.rs  xml_utilities.rs
core/src/utils/: file_helper.rs  foreign_lang_ids_finder.rs  mod.rs  xml_read_helper.rs
core/src/validate/: apostrophe.rs  format_string.rs  formatter.rs  missing_strings.rs  mod.rs  validator.rs
core/src/writer/: csv_writer.rs  xml_writer.rs
(+93 files in other folders)
