[package]
name = 'android_localization_cli'
version = '0.1.8'
authors = ['jayrave <jayanthan.raveendiran@gmail.com>']
edition = '2018'

[dependencies]
android_localization_core = { path = '../core' }
android_localization_utilities = { path = '../utilities' }
clap = '2.32.0'
console = '0.6.2'
lazy_static = '1.1.0'
regex = '1.0.5'

[dev-dependencies]
tempfile = '3.0.3'
test_utilities = { path = '../test_utilities' }