[package]
name = 'android_localization_core'
version = '0.1.0'
authors = ['jayrave <jayanthan.raveendiran@gmail.com>']
edition = '2018'

[dependencies]
android_localization_utilities = { path = '../utilities' }
csv = '1'
lazy_static = '1.1.0'
regex = '1.0.5'
xml-rs = '0.8'

[dev-dependencies]
tempfile = '3.0.3'
test_utilities = { path = '../test_utilities' }